--- a/src/modules/cronometro/cronometro.module.scss
+++ b/src/modules/cronometro/cronometro.module.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     grid-area: cronometro;
+   
   
     .relogioWrapper {
       align-items: center;
@@ -40,6 +41,7 @@
     }
   
     @media screen and (min-width:1280px) {
+      margin-top: 15px;
       
       .relogioWrapper{
         font-size: 10rem;
